# warden

./: .env.example  .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  README.md  SUBMISSION.md  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.base.json
.github/PULL_REQUEST_TEMPLATE/: pr1_ika_encrypt.md  pr2_qvac.md  pr3_umbra.md
app/: next.config.js  package.json  tsconfig.json
app/src/app/: layout.tsx  page.tsx
app/src/app/audit/: page.tsx
app/src/app/deploy/: page.tsx
app/src/app/monitor/: page.tsx
app/src/lib/: wardenClient.ts
external-sdks/encrypt/: package-lock.json
external-sdks/encrypt/chains/solana/program-sdk/anchor/src/: lib.rs
programs/warden-core/: Cargo.toml
programs/warden-core/src/: lib.rs
programs/warden-core/tests/: cpi_integration.rs  smoke.rs
programs/warden-fhe-state/: Cargo.toml
programs/warden-fhe-state/src/: compliance.rs  errors.rs  lib.rs
programs/warden-fhe-state/src/instructions/: execute_compliance_graph.rs  execute_proposal.rs  finalise_proposal.rs  initialize_state.rs  mod.rs  submit_proposal.rs  update_encrypted_state.rs  verify_proposal.rs
programs/warden-fhe-state/src/state/: encrypted_state.rs  mod.rs  proposal_account.rs
programs/warden-policy/: Cargo.toml
programs/warden-policy/src/: errors.rs  lib.rs
programs/warden-policy/src/instructions/: authorize_proposal.rs  bind_dwallet.rs  close_agent.rs  initialize_policy.rs  mod.rs  pause_agent.rs  update_guardrails.rs
programs/warden-policy/src/state/: agent_account.rs  guardrail_set.rs  mod.rs  policy_account.rs
programs/warden-settlement/: Cargo.toml
programs/warden-settlement/src/: errors.rs  lib.rs
programs/warden-settlement/src/instructions/: execute_settlement.rs  grant_viewing_key.rs  initialize_vault.rs  mod.rs  shield_inflow.rs  unshield_to_principal.rs
programs/warden-settlement/src/state/: mod.rs  settlement_vault.rs  viewing_key_grant.rs
scripts/: deploy.ts  seed.ts
scripts/devnet/: .warden-program-id  close-buffer.ts  deploy.sh  deploy.ts  e2e-demo.ts  keygen.ts  upgrade.ts
stubs/encrypt-anchor/: Cargo.toml
stubs/encrypt-anchor/src/: lib.rs
stubs/encrypt-dsl/: Cargo.toml
stubs/encrypt-dsl/src/: lib.rs
stubs/encrypt-solana-test/: Cargo.toml
stubs/encrypt-solana-test/src/: lib.rs
stubs/encrypt-types/: Cargo.toml
stubs/encrypt-types/src/: lib.rs
stubs/ika-dwallet-anchor/: Cargo.toml
stubs/ika-dwallet-anchor/src/: lib.rs
stubs/ika-solana-sdk-types/: Cargo.toml
stubs/ika-solana-sdk-types/src/: lib.rs
tests/: fhe-state.test.ts  policy.test.ts  settlement.test.ts
tests/e2e/: full-execution-cycle.test.ts
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: fhe_state_lifecycle.rs  policy_lifecycle.rs
tests/unit/: prover.test.ts
