[workspace]
members = [
    "programs/warden-policy",
    "programs/warden-fhe-state",
    "programs/warden-settlement",
]
resolver = "2"

# Shared deps used by programs that don't need a specific anchor version.
# Programs integrating Encrypt (0.32) or Ika (1.x) declare anchor-lang locally.
[workspace.dependencies]
anchor-spl       = { version = "0.30.1", features = ["token", "token_2022"] }
solana-program   = "1.18"

[profile.release]
overflow-checks = true
lto             = "thin"
opt-level       = 3

[profile.test]
overflow-checks = true
opt-level       = 1
