[package]
name    = "warden-fhe-state"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "warden_fhe_state"

[dependencies]
# Encrypt requires anchor-lang 0.32
anchor-lang   = { version = "0.32", features = ["init-if-needed"] }
anchor-spl    = { version = "0.32", features = ["token"] }
# Encrypt FHE SDK — provides #[encrypt_fn] DSL and EncryptCpi trait
encrypt-anchor = "0.1"
encrypt-types  = "0.1"
encrypt-dsl    = "0.1"

[dev-dependencies]
anchor-client      = "0.32"
encrypt-solana-test = "0.1"
solana-sdk         = "2"
