[package]
name    = "warden-policy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "warden_policy"

[dependencies]
# Ika sponsor SDK targets anchor-lang 1.x in production; for compile-only
# verification we pin to workspace 0.30.1 against the local Ika stub.
anchor-lang          = { workspace = true }
anchor-spl           = { workspace = true }
ika-dwallet-anchor   = "0.1"
ika-solana-sdk-types = "0.1"

[dev-dependencies]
